Updated to latest SDK version

--- a/src/main/resources/archetype-resources/Dockerfile
+++ b/src/main/resources/archetype-resources/Dockerfile
@@ -1,9 +1,5 @@
-FROM java:8
+FROM maven:onbuild-alpine
 
 EXPOSE 8080
 
-CMD ["java", "-jar", "${artifactId}-${version}.jar"]
-
-WORKDIR /app
-
-ADD . ./
+CMD ["java", "-Xmx400m", "-jar", "/usr/src/app/target/${artifactId}-${version}.jar"]
