--- a/src/main/resources/archetype-resources/Dockerfile
+++ b/src/main/resources/archetype-resources/Dockerfile
@@ -1,5 +1,16 @@
-FROM maven:onbuild-alpine
+FROM maven:alpine AS build
+
+WORKDIR /usr/src/app
+
+COPY src src
+COPY pom.xml pom.xml
+
+RUN mvn clean package
+
+FROM openjdk:jre-alpine
 
 EXPOSE 8080
 
-CMD ["java", "-Xmx400m", "-jar", "/usr/src/app/target/${artifactId}-${version}.jar"]
+COPY --from=build /usr/src/app/target/service-${artifactId}.jar /usr/src/app/target/service-${artifactId}.jar
+
+CMD ["java", "-Xmx600m", "-jar", "/usr/src/app/target/service-${artifactId}.jar"]
