--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.boomi.flow.services</groupId>
+    <groupId>com.manywho.services</groupId>
     <artifactId>archetype</artifactId>
     <version>2.0-SNAPSHOT</version>
     <packaging>maven-archetype</packaging>
