--- a/src/main/resources/archetype-resources/Dockerfile
+++ b/src/main/resources/archetype-resources/Dockerfile
@@ -7,10 +7,10 @@ COPY pom.xml pom.xml
 
 RUN mvn clean package
 
-FROM openjdk:jre-alpine
+FROM openjdk:8-jre-alpine
 
 EXPOSE 8080
 
 COPY --from=build /usr/src/app/target/service-${artifactId}.jar /usr/src/app/target/service-${artifactId}.jar
 
-CMD ["java", "-Xmx600m", "-jar", "/usr/src/app/target/service-${artifactId}.jar"]
+CMD ["java", "-jar", "/usr/src/app/target/service-${artifactId}.jar"]
