--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>com.manywho.services</groupId>
     <artifactId>archetype</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <version>2.0.0-beta-08</version>
     <packaging>maven-archetype</packaging>
 
     <name>Boomi Flow Service Archetype</name>
